--- a/SalesWebMvc/Views/Shared/_Layout.cshtml
+++ b/SalesWebMvc/Views/Shared/_Layout.cshtml
@@ -33,11 +33,11 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        <li><a class="nav-link text-dark" asp-area="" asp-controller="Departments" asp-action="Index">Departments</a>
                         <li>
-                        <li><a class="nav-link text-dark" asp-area="" asp-controller="Seller" asp-action="Index">Sellers</a>
-                        </li>
-                    </ul>
+                           </li> <a class="nav-link text-dark" asp-area="" asp-controller="Departments" asp-action="Index">Departments</a><li>
+                            
+                            <li><a class="nav-link text-dark" asp-area="" asp-controller="Sellers" asp-action="Index">Sellers</a></li>
+</ul>
                 </div>
             </div>
         </nav>
