--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -3,9 +3,9 @@
     ViewData["Title"] = "Sellers";
 }
 
-<h2>ViewData["title"]</h2>
+<h2>@ViewData["title"]</h2>
 <p>
-    <a asp-action="Create"class="btn btn-default">Create New</a>
+    <a asp-action="Create" class="btn btn-defualt">Create New</a>
 </p>
 <table class=" table table-striped  table-hover">
     <thead>
@@ -29,7 +29,7 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr class=" success">
+            <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.name)
                 </td>
